# platform.core.appfw.message-port-dbus

./: configure.ac  messageportd.service.in  project.config
lib/: Makefile.am  message-port.c  message-port.h  message-port.pc.in  message_port.h  message_port_log.h  msgport-factory.c  msgport-manager.c  msgport-manager.h  msgport-service.c  msgport-service.h  msgport-utils.h
lib/capi/: message_port.cpp  message_port.h  message_port_internal.cpp  message_port_internal.h  message_port_log.h
lib/compatibility/: message_port_wrapper.c
packaging/: message-port.conf  message-port.spec
